[project]
name = "available_ram_monitor"
version = "0.1.0"
description = "A simple class to monitor available RAM in a system."
readme = "README.md"
authors = [
    { name="alfredo000008", email="alfredogasa8@hotmail.com" }
]
dependencies = [
"psutil==7.0.0"
]
requires-python = ">=3.7,<4.0"

[project.optional-dependencies]
dev = [
  "pipreqs==0.5.0",
  "pytest==8.3.5",
  "psutil==7.0.0"
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["available_ram_monitor"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "src"
]

[tool.poetry]
name = "available_ram_monitor"
version = "0.1.0"
packages = [{ include = "my_package", from = "src" }]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"